--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -110,7 +110,7 @@
         <div class="card">
             <div class="image-panel">
                 <div class="image-block">
-                    <img src="images/shirt.png" alt="image" />
+                    <img src="images/jacket.png" alt="image" />
                 </div>
             </div>
             <div class="card-name">Winter Jacket</div>
@@ -125,7 +125,7 @@
         <div class="card">
             <div class="image-panel">
                 <div class="image-block">
-                    <img src="images/shirt.png" alt="image" />
+                    <img src="images/tshirt.png" alt="image" />
                 </div>
             </div>
             <div class="card-name">Red Round Neck</div>
@@ -140,7 +140,7 @@
         <div class="card">
             <div class="image-panel">
                 <div class="image-block">
-                    <img src="images/shirt.png" alt="image" />
+                    <img src="images/sweatshirt.png" alt="image" />
                 </div>
             </div>
             <div class="card-name">Sweat Shirt</div>
