--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -1,9 +1,9 @@
+<!-- assignment6 -->
+
 <!DOCTYPE html>
 <html>
 
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
@@ -14,10 +14,10 @@
 <body>
 <!-- header section -->
     <header class="menu-container">
-        <div style="margin-left:20px;margin-right:20px;">
+        <div class="outer-box">
             <div class="title"><img src="images/logo.png" alt="logo"></div>
             <div class="menus">
-                <div class="icon"><span></span></div>
+                <div class="icon"><span class="span-icon"></span></div>
                 <div class="menu-items">
                     <div><a>My Account</a></div>
                     <div><a>My Orders</a></div>
@@ -36,7 +36,7 @@
                     <img src="images/shirt.png" alt="image" />
                 </div>
             </div>
-            <div class="card-name">Bath Wardrobe</div>
+            <div class="product-name">Bath Wardrobe</div>
             <div class="price">&#8377; 850</div>
             <button>ADD TO CART</button>
             <div class="size">
@@ -53,7 +53,7 @@
                     <img src="images/jacket.png" alt="image" />
                 </div>
             </div>
-            <div class="card-name">Winter Jacket</div>
+            <div class="product-name">Winter Jacket</div>
             <div class="price">&#8377; 850</div>
             <button>ADD TO CART</button>
             <div class="size">
@@ -68,7 +68,7 @@
                     <img src="images/tshirt.png" alt="image" />
                 </div>
             </div>
-            <div class="card-name">Red Round Neck</div>
+            <div class="product-name">Red Round Neck</div>
             <div class="price">&#8377; 850</div>
             <button>ADD TO CART</button>
             <div class="size">
@@ -83,7 +83,7 @@
                     <img src="images/sweatshirt.png" alt="image" />
                 </div>
             </div>
-            <div class="card-name">Sweat Shirt</div>
+            <div class="product-name">Sweat Shirt</div>
             <div class="price">&#8377; 850</div>
             <button>ADD TO CART</button>
             <div class="size">
@@ -98,7 +98,7 @@
                     <img src="images/shirt.png" alt="image" />
                 </div>
             </div>
-            <div class="card-name">Bath Wardrobe</div>
+            <div class="product-name">Bath Wardrobe</div>
             <div class="price">&#8377; 850</div>
             <button>ADD TO CART</button>
             <div class="size">
@@ -113,7 +113,7 @@
                     <img src="images/jacket.png" alt="image" />
                 </div>
             </div>
-            <div class="card-name">Winter Jacket</div>
+            <div class="product-name">Winter Jacket</div>
             <div class="price">&#8377; 850</div>
             <button>ADD TO CART</button>
             <div class="size">
@@ -128,7 +128,7 @@
                     <img src="images/tshirt.png" alt="image" />
                 </div>
             </div>
-            <div class="card-name">Red Round Neck</div>
+            <div class="product-name">Red Round Neck</div>
             <div class="price">&#8377; 850</div>
             <button>ADD TO CART</button>
             <div class="size">
@@ -143,7 +143,7 @@
                     <img src="images/sweatshirt.png" alt="image" />
                 </div>
             </div>
-            <div class="card-name">Sweat Shirt</div>
+            <div class="product-name">Sweat Shirt</div>
             <div class="price">&#8377; 850</div>
             <button>ADD TO CART</button>
             <div class="size">
